styles/common-template.css
/* ... */
tr.printHeader {border:solid #808080 1px;  
    background-image: -moz-linear-gradient(top center, &[ToolbarColor];, &[PrimaryColor_1];); 
    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(&[ToolbarColor];), to(&[PrimaryColor_1];)); 
}

.invoice {border: 1px solid #808080;}

table.printFB {
  border-bottom: 1px solid #C0C9D7;
  border-left:   1px solid #C0C9D7;
  border-right:  1px solid #AFC4D5;
  border-top:    1px solid #AFC4D5;
  padding-left:4px;padding-right:3px;padding-top:2px;padding-bottom:2px;
}

/* captcha */
.captcha td { /*padding-left: 25px; text-align: center; */}
.captcha table td { width: 51; height: 50; } /* puzzle td */
.captcha .a { background-position: 0% 0%; padding: 0; margin: 0;}
.captcha .b { background-position: 25% 0%; padding: 0; margin: 0;}
.captcha .c { background-position: 50% 0%; padding: 0; margin: 0;}
.captcha .d { background-position: 75% 0%; padding: 0; margin: 0;}
.captcha .e { background-position: 100% 0%; padding: 0; margin: 0;}

.captcha .f { background-position: 0% 100%; padding: 0; margin: 0;}
.captcha .g { background-position: 25% 100%; padding: 0; margin: 0;}
.captcha .h { background-position: 50% 100%; padding: 0; margin: 0;}
.captcha .i { background-position: 75% 100%; padding: 0; margin: 0;}
.captcha .j { background-position: 100% 100%; padding: 0; margin: 0;}

/*
.login {background-color: transparent; border-bottom: 1px solid #104A7B;border-right: 1px solid #104A7B;border-left: 1px solid #AFC4D5;border-bottom:1px solid #AFC4D5;border-top:1px solid #AFC4D5;color:#000066;height:19px;text-decoration:none; font-size:11px}
.lButton {background: #F0F2F6;border-bottom: 1px solid #104A7B;border-right: 1px solid #104A7B;border-left: 1px solid #AFC4D5;border-top:1px solid #AFC4D5;color:#000066;height:19px;text-decoration:none;cursor: pointer; font-size:11px}
*/
.userLogin {font-weight: bold; width: auto !important; max-width: 350px; color: &[SecondaryColorA_3];; border: 2px solid &[PrimaryColor_1];; padding: 10px;}
.userLogin .button, #ropLeft .button { display: block; padding: 7px; margin-top: 4px; text-align: left; font-size: 16px; font-weight: normal; color: &[Color];; }
.userLogin .button img, #ropLeft .button img { float: left; margin-right: 7px; }

#ropLeft .button { margin: 0px 5px 10px 5px; white-space: normal; }

.userLogin .rounded_rect_tbl td { border: none; padding: 1px 10px 8px; }
.userLogin #errorMessage { max-width: 420px; }
.fbUser div { position: relative; }
.fbUser img.icon16 { position: absolute; bottom: 0; right: 0; margin: 0px; }
#loginForm td { font-weight: bold; }
.redeem { width: auto; background-color: #ffffff; color: #2B0764; border: 1px solid #cccccc; padding: 5 5 5 5; }

.rte { margin-bottom: 7px; background-color: &[PrimaryColor_4];; border: 2px solid &[PrimaryColor_1];; padding:0; width: 100%; height: 107px;  }
.rte_body { overflow: hidden; color: &[PrimaryColor_4_text];; font-family :Helvetica, arial; fontSize : 16px; margin:5; }
.rte_body object { display: block; background: #000000; }

/* like menu_Options in iphone.css */
#browser_dlg { z-index: 1000; top: 0px; position: absolute; width: 320px; padding: 0px; visibility: hidden; }
#browser_dlg table { width: 100%; }
#browser_dlg .top { width: 320px;  height: 35px; background: url(../images/skin/iphone/options_back.png) top center !important; }
#browser_dlg .content { color: #fff; background: url(../images/skin/iphone/options_back_middle.png) top center !important; }
#browser_dlg .content .statement { padding: 0px 25px 15px 25px; font-size: 18px; }
#browser_dlg .content .btns_panel { width: auto; margin-top: 20px; }
#browser_dlg .bottom { height: 20px; background: url(../images/skin/iphone/options_back.png) bottom center; }
#browser_dlg .content .prompt_text { display: none; border: 1px solid #fff; background: transparent; width: 280; color: #fff; }
.iphone_dlg_btn { cursor: pointer; text-align: center; color: #fff; padding: 0px; font-size: 18px; font-weight: normal; width: 129px; height: 44px; line-height: 44px; background: url(../images/skin/iphone/dlg_button.jpg); }

/******************* Touch UI ***************************/

/* for fixing "selector" on iPhone
input { outline: 0 none; }
form { margin-top: 0; margin-bottom: 0; }


/* prevents blue rect in WebKit browsers */
input:focus { outline: 0 none; }

#pane2 {position: absolute; width: auto; display: inline; left: 0px; top: 0px; min-width: 1px; }
* html #pane2 { width: 300px; }

/* dialog: body is a parent */
.panel_block {
  position: absolute;
  width: 550px;
  min-width: 300px;
  max-width: 1100px;
  padding: 0px;
  box-shadow: 6px 6px 25px rgba(0, 0, 0, 0.5);
  -moz-box-shadow: 6px 6px 25px rgba(0, 0, 0, 0.5);
  -webkit-box-shadow: 6px 6px 25px rgba(0, 0, 0, 0.5);
  z-index: 100;
}


/* 'on page' */
div .panel_block, td .panel_block {
  position: static;
  
  width: 100%;
  min-width: 0;
  max-width: none;
  
  box-shadow : none;
  -moz-box-shadow : none;
  -webkit-box-shadow: none;

  -webkit-transition: width 0.4s ease-in-out;
  -o-transition: width 0.4s ease-in-out;
  -moz-transition: width 0.4s ease-in-out;
  transition: width 0.4s ease-in-out;
}

div .standalone_dlg, td .standalone_dlg { width: 520px; margin-top: 4px;}

div .panel_block .dlg_cross, td .panel_block .dlg_cross { display: none; }

#siteResourceList .panel_block, #fts-sift .panel_block{
  position: absolute;
  visibility: hidden;
  width: 35%;
  min-width: 300px;
  max-width: 500px;
}
#siteResourceList .widget .panel_block {
  position: static;
  visibility: visible;
  width: 100%;
}

/* title of data entry widget */
#siteResourceList .widget .panel_block .containers  td { height: 30px; background-color: &[BackgroundColor];; }
#siteResourceList .widget .panel_block .embed .containers  td { background-color: transparent; }

#common_filter { width: 50%; min-width: 20em; max-width: 45em; }

/*********************************** not used now ?
#fts_filter { width: auto; min-width: 150px;  overflow: visible; }
/* ... */

